unpackaged/main/default/objects/Activity/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <description>I have no idea if this is the right environment, huh</description>
    <displayFormat>ABC-{0000}</displayFormat>
    <label>abc</label>
    <type>AutoNumber</type>
</CustomField>