unpackaged/main/default/objects/Activity/fields/another_one__c.field-meta.xml
<CustomField>
    <fullName>another_one__c</fullName>
    <label>another_one</label>
    <type>Email</type>
</CustomField>