unpackaged/main/default/objects/Activity/fields/bob__c.field-meta.xml
<CustomField>
    <fullName>bob__c</fullName>
    <displayFormat>ABC-{0000}</displayFormat>
    <label>aehjwdbaejklfb</label>
    <type>AutoNumber</type>
</CustomField>