unpackaged/main/default/objects/Activity/fields/def__c.field-meta.xml
<CustomField>
    <fullName>def__c</fullName>
    <displayFormat>DEF-{0000}</displayFormat>
    <label>def</label>
    <type>AutoNumber</type>
</CustomField>