unpackaged/main/default/objects/Activity/fields/efsfesefesf__c.field-meta.xml
<CustomField>
    <fullName>efsfesefesf__c</fullName>
    <label>efsfesefesf</label>
    <type>AutoNumber</type>
</CustomField>