unpackaged/main/default/objects/Activity/fields/field_4__c.field-meta.xml
<CustomField>
    <fullName>field_4__c</fullName>
    <label>field-4</label>
    <type>AutoNumber</type>
</CustomField>