unpackaged/main/default/objects/Activity/fields/field_5__c.field-meta.xml
<CustomField>
    <fullName>field_5__c</fullName>
    <label>field-5</label>
    <type>AutoNumber</type>
</CustomField>