unpackaged/main/default/objects/Activity/fields/field_6__c.field-meta.xml
<CustomField>
    <fullName>field_6__c</fullName>
    <label>field-6</label>
    <type>AutoNumber</type>
</CustomField>