unpackaged/main/default/objects/Activity/fields/test_field__c.field-meta.xml
<CustomField>
    <fullName>test_field__c</fullName>
    <displayFormat>TEST-{0000}</displayFormat>
    <label>test field</label>
    <type>AutoNumber</type>
</CustomField>